--- a/edit.html
+++ b/edit.html
@@ -5,7 +5,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <script src="jquery.min.js"></script>
     <script src="functions.js"></script>
-    <script src="new.js"></script>
+    <script src="edit.js"></script>
 
     <link rel="stylesheet" href="main.css">  </head>
   <body>
@@ -17,7 +17,7 @@
         <h1><span>EXECUTE</span> <br/>my script!</h1>
       </div>
     </div>
-    <h2>Save New Script</h2>
+    <h2>Edit Script</h2>
     <div class="fields">
       <label for="name">Name</label>
       <input id="field_name" type="text" name="name">
@@ -25,7 +25,7 @@
       <label for="script">Script</label>
       <textarea id="field_script" name="script"></textarea>
       <p class="error"></p>
-      <button id="save_button" class="save">Save!</button>
+      <button id="update_button" class="save">Update!</button>
     </div>
     <div class="footer">
       <div class="left">
