--- a/info.html
+++ b/info.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html>
   <head>
-    <title>Execute My Script - save new script</title>
+    <title>Execute My Script - info</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <script src="jquery.min.js"></script>
     <script src="functions.js"></script>
-    <script src="new.js"></script>
 
-    <link rel="stylesheet" href="main.css">  </head>
+    <link rel="stylesheet" href="main.css">
+  </head>
   <body>
     <div class="header">
       <div class="left">
@@ -17,22 +17,16 @@
         <h1><span>EXECUTE</span> <br/>my script!</h1>
       </div>
     </div>
-    <h2>Save New Script</h2>
     <div class="fields">
-      <label for="name">Name</label>
-      <input id="field_name" type="text" name="name">
-      <p class="error"></p>
-      <label for="script">Script</label>
-      <textarea id="field_script" name="script"></textarea>
-      <p class="error"></p>
-      <button id="save_button" class="save">Save!</button>
+      <p>Execute my Script ®</p>
+      <p>Version: 0.8</p>
+      <p>Author: Daniel Richert</p>
+      <p>Email: daniel.richert.88@gmx.net</p>
+      <p>Daniel Richert &copy; copyright 2015</p>
     </div>
     <div class="footer">
       <div class="left">
         <a href="popup.html" class="btn-manage_actions" id="back">Back</a>
-      </div>
-      <div class="right">
-        <a href="info.html" class="btn-info">?</a>
       </div>
     </div>
   </body>
