--- a/popup.html
+++ b/popup.html
@@ -4,18 +4,31 @@
     <title>Execute My Script</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <script src="jquery.min.js"></script>
+    <script src="functions.js"></script>
     <script src="popup.js"></script>
 
     <link rel="stylesheet" href="main.css">
   </head>
   <body>
-    <h1>Execute your script! - WIP</h1>
-    <div class="actions">
-      <button class="script_buttons script_buttons_red" id="fillForm">Fill the Form</button>
-      <button class="script_buttons script_buttons_orange" id="fillFormAndProceed">Fill the Form and proceed</button>
+    <div class="header">
+      <div class="left">
+        <img src="icons/128x128.png" alt="Execute my Script Logo" width="80" height="80">
+      </div>
+      <div class="left">
+        <h1><span>EXECUTE</span> <br/>my script!</h1>
+      </div>
     </div>
-    <div class="manage_area">
-      <a href="new.html" class="manage_actions" id="new_script">save new script</a>
+    <div id="button_container" class="actions">
+
+    </div>
+    <div class="footer">
+      <div class="left">
+        <a href="new.html" class="btn-manage_actions" id="new_script">New</a>
+      </div>
+      <div class="right">
+        <a href="#" class="btn-manage_actions" rel="false" id="edit_script">Turn Edit <span class="editMode">On</span></a>
+        <a href="info.html" class="btn-info">?</a>
+      </div>
     </div>
   </body>
 </html>
