label fertig - rts

--- a/new.html
+++ b/new.html
@@ -17,7 +17,7 @@
         <h1><span>EXECUTE</span> <br/>my script!</h1>
       </div>
     </div>
-    <h2>Save New Script</h2>
+    <h2>Save a new Script</h2>
     <div class="fields">
       <label for="name">Name</label>
       <input id="field_name" type="text" name="name">
@@ -25,6 +25,13 @@
       <label for="script">Script</label>
       <textarea id="field_script" name="script"></textarea>
       <p class="error"></p>
+      <label class="left" for="label-list">Label</label>
+      <ul class="label-list">
+        <li rel="red" class="label-item label-item-red"></li>
+        <li rel="green" class="label-item label-item-green"></li>
+        <li rel="yellow" class="label-item label-item-yellow"></li>
+        <li rel="blue" class="label-item label-item-blue"></li>
+      </ul>
       <button id="save_button" class="save">Save!</button>
     </div>
     <div class="footer">
