--- a/edit.html
+++ b/edit.html
@@ -25,6 +25,13 @@
       <label for="script">Script</label>
       <textarea id="field_script" name="script"></textarea>
       <p class="error"></p>
+      <label class="left" for="label-list">Label</label>
+      <ul class="label-list">
+        <li rel="red" class="label-item label-item-red"></li>
+        <li rel="green" class="label-item label-item-green"></li>
+        <li rel="yellow" class="label-item label-item-yellow"></li>
+        <li rel="blue" class="label-item label-item-blue"></li>
+      </ul>
       <button id="update_button" class="save">Update!</button>
     </div>
     <div class="footer">
