organized some stuff

--- a/html/new.html
+++ b/html/new.html
@@ -3,21 +3,21 @@
   <head>
     <title>Execute My Script - save new script</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <script src="jquery.min.js"></script>
-    <script src="functions.js"></script>
-    <script src="edit.js"></script>
+    <script src="../js/jquery.min.js"></script>
+    <script src="../js/functions.js"></script>
+    <script src="../js/new.js"></script>
 
-    <link rel="stylesheet" href="main.css">  </head>
+    <link rel="stylesheet" href="../css/main.css">  </head>
   <body>
     <div class="header">
       <div class="left">
-        <img src="icons/128x128.png" alt="Execute my Script Logo" width="80" height="80">
+        <img src="../icons/128x128.png" alt="Execute my Script Logo" width="80" height="80">
       </div>
       <div class="left">
         <h1><span>EXECUTE</span> <br/>my script!</h1>
       </div>
     </div>
-    <h2>Edit Script</h2>
+    <h2>Save a new Script</h2>
     <div class="fields">
       <label for="name">Name</label>
       <input id="field_name" type="text" name="name">
@@ -32,7 +32,7 @@
         <li rel="yellow" class="label-item label-item-yellow"></li>
         <li rel="blue" class="label-item label-item-blue"></li>
       </ul>
-      <button id="update_button" class="save">Update!</button>
+      <button id="save_button" class="save">Save!</button>
     </div>
     <div class="footer">
       <div class="left">
