--- a/html/popup.html
+++ b/html/popup.html
@@ -3,16 +3,16 @@
   <head>
     <title>Execute My Script</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <script src="jquery.min.js"></script>
-    <script src="functions.js"></script>
-    <script src="popup.js"></script>
+    <script src="../js/jquery.min.js"></script>
+    <script src="../js/functions.js"></script>
+    <script src="../js/popup.js"></script>
 
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="../css/main.css">
   </head>
   <body>
     <div class="header">
       <div class="left">
-        <img src="icons/128x128.png" alt="Execute my Script Logo" width="80" height="80">
+        <img src="../icons/128x128.png" alt="Execute my Script Logo" width="80" height="80">
       </div>
       <div class="left">
         <h1><span>EXECUTE</span> <br/>my script!</h1>
