--- a/html/popup.html
+++ b/html/popup.html
@@ -18,6 +18,15 @@
         <h1><span>EXECUTE</span> <br/>my script!</h1>
       </div>
     </div>
+    <ul class="label-list margin-bottom">
+      <li rel="red" class="label-item label-item-red"></li>
+      <li rel="green" class="label-item label-item-green"></li>
+      <li rel="yellow" class="label-item label-item-yellow"></li>
+      <li rel="blue" class="label-item label-item-blue"></li>
+      <li rel="clear" class="label-item label-item-clear">
+        <img src="../images/clear.png" alt="clear filter">
+      </li>
+    </ul>
     <div id="button_container" class="actions">
 
     </div>
