changing version number

--- a/html/info.html
+++ b/html/info.html
@@ -19,10 +19,11 @@
     </div>
     <div class="fields">
       <p>Execute my Script®</p>
-      <p>Version: 1.0</p>
+      <p>Version: 0.95</p>
       <p>Author: Daniel Richert</p>
-      <p>Email: daniel.richert.88@gmx.net</p>
-      <p>Daniel Richert &copy; copyright 2015</p>
+      <p>Email: daniel@richertproduction.de</p>
+      <p>Website: richertproduction.de</p>
+      <p>Copyright: 2019</p>
     </div>
     <div class="footer">
       <div class="left">
